module8-complete/deploy/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudflared
  name: cloudflared
  namespace: test-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - args:
            - tunnel
            - --config
            - /etc/cloudflared/config/config.yaml
            - run
          image: cloudflare/cloudflared:2023.8.2
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /ready
              port: 2000
            initialDelaySeconds: 10
            periodSeconds: 10
          name: cloudflared
          volumeMounts:
            - mountPath: /etc/cloudflared/config
              name: config
              readOnly: true
            - mountPath: /etc/cloudflared/creds
              name: creds
              readOnly: true
      volumes:
        - name: creds
          secret:
            secretName: tunnel-credentials
        - configMap:
            items:
              - key: config.yaml
                path: config.yaml
            name: cloudflared
          name: config
