module8-complete/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-grpc
  name: test-grpc
  namespace: test-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-grpc
  template:
    metadata:
      labels:
        app: test-grpc
    spec:
      containers:
        - image: ghcr.io/cshep4/grpc-course/test-grpc:latest
          imagePullPolicy: IfNotPresent
          name: test-grpc
          ports:
            - containerPort: 50051
              name: grpc
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: github-packages-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-grpc-with-tls
  name: test-grpc-with-tls
  namespace: test-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-grpc-with-tls
  template:
    metadata:
      labels:
        app: test-grpc-with-tls
    spec:
      containers:
        - image: ghcr.io/cshep4/grpc-course/test-grpc:latest
          imagePullPolicy: IfNotPresent
          name: test-grpc-with-tls
          ports:
            - containerPort: 50051
              name: grpc
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /certs
              name: certs
      imagePullSecrets:
        - name: github-packages-secret
      volumes:
        - name: certs
          secret:
            defaultMode: 256
            secretName: test-grpc-cert-secret
